--- a/setup_nodes.yml
+++ b/setup_nodes.yml
@@ -10,15 +10,11 @@
     template: src=./templates/proxy.sh dest=/etc/profile.d/proxy.sh
     become: yes
     become_method: sudo
-  - name: ensure /etc/systemd/system/docker.service.d/http-proxy.conf is setup properly
-    template: src=./templates/http-proxy.conf dest=/etc/systemd/system/docker.service.d/http-proxy.conf
+  - name: ensure hosts file is setup
+    template: src=./templates/hosts dest=/etc/hosts
     become: yes
     become_method: sudo
-  - name: restart docker
-    script: ./scripts/docker_restart.sh
-    become: yes
-    become_method: sudo
-  - name: move default docker storage location
-    script: ./scripts/docker_storage.sh
+  - name: set timezone to MDT 
+    script: ./scripts/timezone.sh
     become: yes
     become_method: sudo
