--- a/templates/http-proxy.conf
+++ b/templates/http-proxy.conf
@@ -1,2 +1,2 @@
 [Service]
-Environment="HTTP_PROXY=http://web-proxy.corp.hpecorp.net:8080/"
+Environment="HTTP_PROXY=http://web-proxy.corp.hpecorp.net:8080/" "HTTPS_PROXY=http://web-proxy.corp.hpecorp.net:8080/" "NO_PROXY=127.0.0.1,localhost,172.16.1.16,172.16.1.17,172.16.1.18,172.16.1.21,172.16.1.20,172.16.1.24,172.16.1.23,172.16.1.22,172.16.1.25,private-registry.marathon.mesos"
