--- a/templates/override.conf
+++ b/templates/override.conf
@@ -1,3 +1,3 @@
 [Service]
 ExecStart=
-ExecStart=/usr/bin/docker daemon --storage-driver=overlay -H fd:// --insecure-registry private-registry.marathon.mesos:5000  --cluster-store=etcd://172.16.1.16:2379
+ExecStart=/usr/bin/docker daemon --storage-driver=overlay -H fd:// --insecure-registry private-registry.marathon.mesos:5000  --cluster-store=etcd://172.16.1.16:2379 --cluster-advertise={{ ansible_default_ipv4.address }}:2375
